# maquina

./: .coverage  CHANGELOG.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  gpu.yml  publish.yml
benchmarks/: test_profiler_overhead.py
docs/: api.md  index.es.md  index.ja.md  index.md  index.pt-BR.md  index.zh.md  toolchain.es.md  toolchain.ja.md  toolchain.md  toolchain.pt-BR.md  toolchain.zh.md
docs/assets/: capabilities.gen.py
docs/stylesheets/: extra.css
src/mainboard/: __init__.py  cli.py  cpu.py  enums.py  gpu.py  host.py  machine.py  npu.py  registry.py  unit.py  visual.py
src/mainboard/models/: __init__.py  base.py  board.py  clock.py  clock_info.py  compiler_info.py  compute_capability.py  cuda_python_info.py  detected_tool.py  drive_info.py  energy_reading.py  environment.py  gpu_snapshot.py  host_disk.py  identity.py  machine_snapshot.py  memory.py  memory_card.py  memory_hardware.py  meter.py  partition_info.py  pcie_info.py  process_info.py  psutil_results.py  system_compilers.py  thermal_state.py  thermal_tracker.py  throttle_reason.py  toolchain.py  unit_snapshot.py  utilization.py
src/mainboard/profiling/: __init__.py  annotate.py  benchmark.py  bottleneck.py  dispatch.py  models.py  perfetto.py  profiler.py  protocols.py  render.py  report.py  result.py  stages.py  trace.py  tracer.py
src/mainboard/providers/: __init__.py  apple.py
src/mainboard/providers/amd/: __init__.py  gpu.py  protocols.py  tracer.py
src/mainboard/providers/apple/: __init__.py  gpu.py  npu.py  profile.py  protocols.py  tracer.py
src/mainboard/providers/intel/: __init__.py  gpu.py  npu.py
src/mainboard/providers/nvidia/: __init__.py  apis.py  gpu.py  protocols.py  tracer.py
src/mainboard/providers/qualcomm/: __init__.py  gpu.py  npu.py
src/mainboard/shell/: __init__.py  run.py  sysctl.py  sysfs.py  system_profiler.py  whoami.py
src/maquina/: host.py
tests/: conftest.py  test_board.py  test_bottleneck.py  test_cli.py  test_environment.py  test_host.py  test_identity.py  test_integration.py  test_machine.py  test_meter.py  test_models.py  test_nvidia_tracer.py  test_profiling.py  test_profiling_core.py  test_profiling_extra.py  test_providers.py  test_registry.py  test_shell.py  test_storage.py  test_system_compilers.py  test_toolchain.py  test_units.py  test_visual.py
