[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mainboard"
version = "0.0.2"
description = "CPU, GPU, and NPU hardware topology and telemetry for Python."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Pedro Valois", email = "contact@phvv.me" }]
keywords = [
  "apple-silicon",
  "cpu",
  "cuda",
  "gpu",
  "hardware",
  "machine",
  "npu",
  "telemetry",
  "topology",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Hardware",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "cyclopts>=4.16,<5",
  "plumbum>=1.10,<2",
  "psutil>=7,<8",
  "pydantic>=2.13,<3",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6",
  "pyrefly>=1",
  "pytest>=9",
  "pytest-cov>=5",
  "pytest-randomly>=3",
  "ruff>=0.15",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocs-llmstxt>=0.2",
  "mkdocs-static-i18n>=1.2",
  "mkdocstrings[python]>=0.26",
]
nvidia = [
  "cuda-bindings>=13.3,<14; platform_system == 'Linux'",
  "cuda-core>=1,<2; platform_system == 'Linux'",
  "cuda-python>=13.3,<14; platform_system == 'Linux'",
]

[project.scripts]
mainboard = "mainboard.cli:main"

[project.urls]
Documentation = "https://phvv.me/mainboard"
Homepage = "https://github.com/phvv-me/mainboard"
Repository = "https://github.com/phvv-me/mainboard"
Issues = "https://github.com/phvv-me/mainboard/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mainboard*"]

[tool.setuptools.package-data]
mainboard = ["assets/*.svg", "py.typed"]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyrefly]
project-includes = ["src", "tests"]
search-path = ["src", "."]
python-platform = "linux"  # analyze the POSIX paths uniformly; Windows-only code degrades at runtime

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra"
markers = [
  "integration: runs the real hardware probe end to end on the host (deselected from the coverage gate)",
]

[tool.coverage.run]
source = ["mainboard"]
branch = true
omit = ["src/mainboard/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\.\\.\\.",
]
